[gd_scene load_steps=11 format=3 uid="uid://cejsfnteh56v6"]

[ext_resource type="Script" uid="uid://co5twfinwnh0d" path="res://scenes/teleporter_scene/teleporter.gd" id="1_4uuka"]
[ext_resource type="Texture2D" uid="uid://ciqx1lnlb8h2k" path="res://assets/Tiles/Tiles/tile_0124.png" id="1_ceocb"]
[ext_resource type="Texture2D" uid="uid://emydr7qrr2iv" path="res://scenes/entities/player/Shadow.png" id="2_wivkl"]
[ext_resource type="Shader" uid="uid://85p8p14oh1h3" path="res://scenes/teleporter_scene/teleporter_color.gdshader" id="3_kmt6d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4uuka"]
radius = 12.0

[sub_resource type="Animation" id="Animation_tmhco"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_wivkl"]
resource_name = "enter"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(2, 2), Vector2(0, 0), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.17453292519943295]
}

[sub_resource type="Animation" id="Animation_kmt6d"]
resource_name = "idle"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.2617993877991494, -3.4033920413889427]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qikr"]
_data = {
&"RESET": SubResource("Animation_tmhco"),
&"enter": SubResource("Animation_wivkl"),
&"idle": SubResource("Animation_kmt6d")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tmhco"]
resource_local_to_scene = true
shader = ExtResource("3_kmt6d")
shader_parameter/target_color = Color(1, 0, 0, 1)
shader_parameter/tolerance = 0.1

[node name="Teleporter" type="Area2D"]
collision_layer = 16
collision_mask = 257
script = ExtResource("1_4uuka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4uuka")
debug_color = Color(0.8894623, 0.0002652967, 0.79761755, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0qikr")
}
autoplay = "idle"

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.7058824)
position = Vector2(0, 11)
scale = Vector2(2, 2)
texture = ExtResource("2_wivkl")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tmhco")
scale = Vector2(2, 2)
texture = ExtResource("1_ceocb")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
